testsuite/poke.pkl/mul-f32-diag-2.pk
/* { dg-do compile } */

var res
  = 1 .* 3H; /* { dg-error "invalid operand .*" } */
